tests/should-fail/semantics/unary-plus-non-numeric.j
function t takes nothing returns nothing
    local string r = + "foobar"
endfunction
